--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -23,7 +23,7 @@
 
 @media screen and (max-width:767px) {
   .cover__title {
-    padding-top: 33pxpx;
+    padding-top: 33px;
     width: 288px;
     font-size: 32px;
   line-height: 35px;
