--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,25 +2,13 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-}
-
-.footer__links li {
-  display: inline-block;
-}
-
-.footer__links li:first-child .footer__link {
-  padding: 0;
+  display: flex;
 }
 
 
 @media screen and (max-width:767px) {
-  .footer__links li {
-    display: block;
-    padding-top: 32px;
-  }
-  
-  .footer__links li:first-child {
-    padding: 0;
+  .footer__links {
+    flex-direction: column;
   }
 }
 
