--- a/pages/index.css
+++ b/pages/index.css
@@ -33,5 +33,6 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__content/footer__content.css);
 @import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link-item/footer__link-item.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/foter__copyright.css);
