исправления замечаний ревьюера

--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,6 +4,8 @@
   line-height: 22px;
   text-decoration: underline;
   color: #fff;
+  padding-top: 12px;
+  transition: opacity .3s ease-out;
 }
 
 .place__link:hover {
