--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,10 +4,7 @@
   width: 1184px;
   background-image: url(../../images/cover-background.jpg);
   background-size: cover;
-}
-
-.cover a {
-  text-decoration: none;
+  background-position: center;
 }
 
 @media screen and (max-width:1279px) {
