--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,10 +5,17 @@
   font-size: 16px;
   line-height: 18px;
   color: #fff;
+  transition: opacity .3s ease-out;
+}
+
+.footer__link:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width:767px) {
   .footer__link {
     padding: 0;
+    font-size: 24px;
+    line-height: 24px;
   }
 }
