--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,11 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 28px;
+  transition: opacity .3s ease-out;
+}
+
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width:767px) {
