--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,7 +1,8 @@
 .place__website {
   grid-area: website;
   display: flex;
-  align-items: flex-end;
+  justify-content: flex-end;
+  flex-direction: column;
 }
 
 @media screen and (max-width:767px) {
